Deleted Some Background Images

--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background-image: url(../../imgs/background4.jpeg);
+    background-image: url(../../imgs/background.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
