Changed some  margins

--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -282,20 +282,17 @@ header>h3 {
 
 /* == contact icons and links == */
 
-#greater-p-top-margin.contact-section>p {
+.contact-section>p:nth-of-type(n) {
     margin-right: 10px;
     margin-top: 15px;
 }
 
-#greater-p-top-margin.skills-section>p {
+.skills-section>p:nth-of-type(n) {
     margin-top: 15px;
 }
 
-#greater-p-top-margin.contact-section>p:first-of-type {
-    margin-top: 0;
-}
-
-#greater-p-top-margin.skills-section>p:first-of-type {
+.contact-section>p:first-of-type,
+.skills-section>p:first-of-type {
     margin-top: 0;
 }
 
