--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -308,7 +308,7 @@ header>h3 {
     }
     .left-side {
         width: 80%;
-        margin: auto;
+        margin: 0 auto;
     }
     .left-side>section {
         margin-left: 0;
@@ -359,7 +359,7 @@ header>h3 {
     }
     .right-side {
         width: 80%;
-        margin: auto;
+        margin: 0 auto;
     }
     .right-side>section {
         margin-left: 0;
