--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -40,7 +40,8 @@ main {
     margin-top: 35px;
     display: flex;
     flex-wrap: wrap;
-    min-height: 297mm;
+    /* minus everything which is above */
+    min-height: calc(297mm - 200px);
 }
 
 .vertical-line {
@@ -49,7 +50,7 @@ main {
     background-color: black;
     float: right;
     background: rgb(237, 237, 237);
-    background: -moz-linear-gradient(240deg, rgba(237, 237, 237, 1) 0%, rgba(237, 237, 237, 0.8645833333333334) 30%, rgba(236, 236, 236, 1) 61%, rgba(237, 237, 237, 1) 100%);
+    background: -moz-linear-gradient(240deg, rgba(237, 237, 237, 1) 0%, rgba(100, 73, 73, 0.865) 30%, rgba(236, 236, 236, 1) 61%, rgba(237, 237, 237, 1) 100%);
     background: -webkit-linear-gradient(240deg, rgba(237, 237, 237, 1) 0%, rgba(237, 237, 237, 0.8645833333333334) 30%, rgba(236, 236, 236, 1) 61%, rgba(237, 237, 237, 1) 100%);
     background: linear-gradient(240deg, rgba(237, 237, 237, 1) 0%, rgba(237, 237, 237, 0.8645833333333334) 30%, rgba(236, 236, 236, 1) 61%, rgba(237, 237, 237, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#ededed", endColorstr="#ededed", GradientType=1);
