--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -15,6 +15,35 @@ main {
     box-shadow: 0px -10px 62px 11px #2e2d2d;
 }
 
+a {
+    color: black;
+}
+
+
+/* For PDF converting */
+
+
+/* https://www.web2pdfconvert.com */
+
+
+/* body {
+    background-color: black;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+main {
+    margin: 0 0;
+    max-width: 210mm;
+    min-height: 297mm;
+    background-color: white;
+    box-shadow: 0px -10px 62px 11px #2e2d2d;
+}
+
+*/
+
+
+/* End For PDF converting */
+
 .gradient-box-top {
     width: 100%;
     height: 30px;
@@ -26,7 +55,7 @@ main {
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#e6e6e6", endColorstr="#ffffff", GradientType=1);
 }
 
-.gradient-box-end {
+.gradient-box-bottom {
     width: 100%;
     height: 30px;
     background: rgb(237, 237, 237);
@@ -145,6 +174,7 @@ header>h3 {
     margin-right: 17.5px;
     padding-left: 60px;
     margin-top: 2px;
+    line-height: 1.3em;
 }
 
 .right-side>section>.institution-block>p {
@@ -153,6 +183,7 @@ header>h3 {
     margin-left: 17.5px;
     padding-right: 60px;
     margin-top: 2px;
+    line-height: 1.3em;
 }
 
 .right-side>section>.institution-block>ul {
@@ -160,8 +191,9 @@ header>h3 {
     text-align: left;
     margin-left: 50px;
     padding-right: 60px;
-    margin-top: 6px;
+    margin-top: 10px;
     list-style-type: disc;
+    line-height: 1.3em;
 }
 
 .right-side>section>.institution-block>ul>li {
@@ -193,7 +225,7 @@ header>h3 {
     margin-left: 17.5px;
     padding-right: 60px;
     margin-top: 2px;
-    line-height: 1.1em;
+    line-height: 1.3em;
 }
 
 
@@ -255,10 +287,6 @@ header>h3 {
 
 
 /* -- contact icons and links-- */
-
-.contact-section>p>a {
-    color: black;
-}
 
 .contact-section>p>img,
 .contact-section>p>a>img {
