--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -399,6 +399,15 @@ header>h3 {
         margin-right: 0;
         margin-bottom: 40px;
     }
+    .right-side>section>p {
+        padding-right: 17.5px;
+    }
+    .right-side>section>.institution-block>p {
+        padding-right: 17.5px;
+    }
+    .right-side>section>.institution-block>ul {
+        padding-right: 17.5px;
+    }
     .right-side>section>.section-name {
         background: rgb(230, 230, 230);
         background: -moz-linear-gradient(122deg, rgba(230, 230, 230, 1) 0%, rgba(237, 237, 237, 1) 49%, rgba(230, 230, 230, 1) 100%);
