Hotfix: line-height

--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -221,6 +221,7 @@ header>h3 {
     margin-right: 17.5px;
     padding-left: 60px;
     margin-top: 2px;
+    line-height: 1.3em;
 }
 
 .right-side>section>p {
