--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -48,6 +48,20 @@ main {
 
 /* End For PDF converting */
 
+.attachment {
+    float: right;
+}
+
+.profile-picture {
+    width: calc(35mm);
+    height: calc(35mm * 1.152);
+    float: right;
+    border: 2px solid black;
+    margin-right: 5px;
+    margin-left: 60px;
+    margin-bottom: 15px;
+}
+
 .gradient-box-top {
     width: 100%;
     height: 30px;
@@ -90,11 +104,13 @@ main {
 }
 
 .left-side {
-    width: calc(210mm*0.35);
+    /* width: calc(210mm*0.35); */
+    width: 35%;
 }
 
 .right-side {
-    width: calc(210mm*0.65);
+    /* width: calc(210mm*0.65); */
+    width: 65%;
 }
 
 
@@ -225,6 +241,15 @@ header>h3 {
 }
 
 .right-side>section>p {
+    font-size: 12px;
+    text-align: left;
+    margin-left: 17.5px;
+    padding-right: 60px;
+    margin-top: 2px;
+    line-height: 1.3em;
+}
+
+.right-side>section>.wrapper>p {
     font-size: 12px;
     text-align: left;
     margin-left: 17.5px;
